slider gap fix

--- a/app/design/frontend/Topocentras/default/web/css/slider.css
+++ b/app/design/frontend/Topocentras/default/web/css/slider.css
@@ -13,7 +13,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 .top-slider {
